<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Spinner
            android:id="@+id/area_polygon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </Spinner>

        <ImageView
            android:id="@+id/img_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescription"
            android:paddingBottom="25dip"
            android:paddingTop="25dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/area_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/height"
                android:nextFocusRight="@+id/area_b"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal" >
            </EditText>

            <EditText
                android:id="@+id/area_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/width"
                android:nextFocusRight="@+id/area_c"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal" >
            </EditText>

            <EditText
                android:id="@+id/area_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/base"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:visibility="gone" >
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/area_solve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dip"
            android:text="@string/solve" >
        </Button>
    </LinearLayout>

</ScrollView>